--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-    "private": true,
-    "type": "module",
+    "name": "sitesa",
+    "version": "1.0.0",
+    "description": "Your project description",
+    "main": "index.js",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+      "dev": "vite",
+      "build": "vite build",
+      "serve": "vite preview"
+    },
+    "dependencies": {
+      "vite": "^2.0.0", 
+      "other-dependency": "^1.0.0"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.11.8",
-        "axios": "^1.6.4",
-        "bootstrap": "^5.3.3",
-        "laravel-vite-plugin": "^1.0",
-        "sass": "^1.56.1",
-        "vite": "^5.0"
+      "vite": "^2.0.0"  
     }
-}
+  }
+  
