--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,36 @@
 {
     "version": 2,
-      "framework": null,
-    "functions": {
-        "api/index.php": {"runtime": "vercel-php@0.7.1"}
-    },
-    "routes": [{
+    "builds": [
+      {
+        "src": "api/index.php",
+        "use": "@vercel/php"
+      }
+    ],
+    "routes": [
+      {
         "src": "/(.*)",
         "dest": "/api/index.php"
-    }],
+      }
+    ],
     "env": {
-        "APP_ENV": "production",
-        "APP_DEBUG": "true",
-        "APP_URL": "https://yourproductionurl.com",
- 
-        "APP_CONFIG_CACHE": "/tmp/config.php",
-        "APP_EVENTS_CACHE": "/tmp/events.php",
-        "APP_PACKAGES_CACHE": "/tmp/packages.php",
-        "APP_ROUTES_CACHE": "/tmp/routes.php",
-        "APP_SERVICES_CACHE": "/tmp/services.php",
-        "VIEW_COMPILED_PATH": "/tmp",
- 
-        "CACHE_DRIVER": "array",
-        "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie"
+      "APP_ENV": "production",
+      "APP_DEBUG": "true",
+      "APP_URL": "https://yourproductionurl.com",
+      "DB_CONNECTION": "mysql",
+      "DB_HOST": "iix400.cloudhost.id",
+      "DB_PORT": "3306",
+      "DB_DATABASE": "fzcbbghb_db_bimbingan",
+      "DB_USERNAME": "fzcbbghb_bimbingan",
+      "DB_PASSWORD": "12bimbingan34",
+      "APP_CONFIG_CACHE": "/tmp/config.php",
+      "APP_EVENTS_CACHE": "/tmp/events.php",
+      "APP_PACKAGES_CACHE": "/tmp/packages.php",
+      "APP_ROUTES_CACHE": "/tmp/routes.php",
+      "APP_SERVICES_CACHE": "/tmp/services.php",
+      "VIEW_COMPILED_PATH": "/tmp",
+      "CACHE_DRIVER": "array",
+      "LOG_CHANNEL": "stderr",
+      "SESSION_DRIVER": "cookie"
     }
-}
+  }
+  
