--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
     "env": {
       "APP_ENV": "production",
       "APP_DEBUG": "true",
-      "APP_URL": "https://yourproductionurl.com",
+      "APP_URL": "https://sitesa-gamma.vercel.app",
       "DB_CONNECTION": "mysql",
       "DB_HOST": "iix400.cloudhost.id",
       "DB_PORT": "3306",
