--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,35 @@
 {
     "version": 2,
-      "framework": null,
+    "framework": null,
     "functions": {
-        "api/index.php": {"runtime": "vercel-php@0.7.1"}
+        "api/index.php": { "runtime": "vercel-php@0.6.0" }
     },
-    "routes": [{
-        "src": "/(.*)",
-        "dest": "/api/index.php"
-    }],
+    "routes": [
+        { "src": "/build/(.*)", "dest": "/public/build/" },
+        { "src": "/(.*)", "dest": "/api/index.php" }
+    ],
+    "public": true,
+    "buildCommand": "vite build",
+    "outputDirectory": "public",
     "env": {
         "APP_ENV": "production",
-        "APP_DEBUG": "true",
-        "APP_URL": "https://yourproductionurl.com",
- 
+        "APP_DEBUG": "false",
+        "APP_URL": "http://localhost",
+        "APP_KEY": "base64:SC3y77N7U85UgWGrvBAj0RZZYtqPBYoj75aJCzcHnIw",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
         "APP_ROUTES_CACHE": "/tmp/routes.php",
         "APP_SERVICES_CACHE": "/tmp/services.php",
         "VIEW_COMPILED_PATH": "/tmp",
- 
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie"
+        "SESSION_DRIVER": "cookie",
+        "DB_CONNECTION": "mysql",
+        "DB_HOST": "iix400.cloudhost.id",
+        "DB_PORT": "3306",
+        "DB_DATABASE": "fzcbbghb_db_bimbingan",
+        "DB_USERNAME": "fzcbbghb_bimbingan",
+        "DB_PASSWORD" : "12bimbingan34"
     }
 }
