--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,15 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/index.php",
+        "src": "public/index.php",
         "use": "@vercel/php"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/api/index.php"
-      }
+        "dest": "public/index.php"
+    }
     ],
     "env": {
       "APP_ENV": "production",
