--- a/vercel.json
+++ b/vercel.json
@@ -13,9 +13,14 @@
     ],
     "env": {
       "APP_ENV": "production",
-      "APP_DEBUG": "false",
-      "APP_URL": "http://localhost",
-      "APP_KEY": "base64:SC3y77N7U85UgWGrvBAj0RZZYtqPBYoj75aJCzcHnIw",
+      "APP_DEBUG": "true",
+      "APP_URL": "https://sitesa-gamma.vercel.app",
+      "DB_CONNECTION": "mysql",
+      "DB_HOST": "iix400.cloudhost.id",
+      "DB_PORT": "3306",
+      "DB_DATABASE": "fzcbbghb_db_bimbingan",
+      "DB_USERNAME": "fzcbbghb_bimbingan",
+      "DB_PASSWORD": "12bimbingan34",
       "APP_CONFIG_CACHE": "/tmp/config.php",
       "APP_EVENTS_CACHE": "/tmp/events.php",
       "APP_PACKAGES_CACHE": "/tmp/packages.php",
@@ -26,6 +31,6 @@
       "LOG_CHANNEL": "stderr",
       "SESSION_DRIVER": "cookie"
     },
-    "outputDirectory": "public"
+    "outputdirectory": "public"
+  }
   
-}
