--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,24 +1,23 @@
-name: Publish Website to CPanel
+name: Publish Laravel Website to CPanel
+
 on:
   push:
     branches:
       - main
+
 jobs:
   FTP-Deploy-Action:
     name: FTP-Deploy-Action
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.1.0
-      with:
-        fetch-depth: 2 
-    - name: Build assets
-      run: npm install && npm run build
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     - name: Install PHP and Composer
       uses: shivammathur/setup-php@v2
       with:
-          php-version: '8.2' # Adjust to match the PHP version used by your Laravel project
-          tools: 'composer'
+        php-version: '8.2' # Adjust to match the PHP version used by your Laravel project
+        tools: composer
 
     - name: Install PHP dependencies
       run: composer install --no-dev --optimize-autoloader
@@ -29,3 +28,9 @@ jobs:
         server: ${{ secrets.SERVER }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
+        local-dir: ./ # The local directory to upload
+        server-dir: ${{ secrets.SERVER_PATH }} # The server directory to upload to
+
+    - name: Set correct permissions
+      run: |
+        ssh ${{ secrets.USERNAME }}@${{ secrets.SERVER }} 'chmod -R 755 ${{ secrets.SERVER_PATH }}/storage ${{ secrets.SERVER_PATH }}/bootstrap/cache'
