--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   FTP-Deploy-Action:
-    name: Deploy via SFTP
+    name: FTP-Deploy-Action
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -22,11 +22,15 @@ jobs:
     - name: Install PHP dependencies
       run: composer install --no-dev --optimize-autoloader
 
-    - name: Deploy to server via SFTP
-      uses: appleboy/ftp-action@v1.1.0
+    - name: FTP-Deploy-Action
+      uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
-        host: ${{ secrets.SFTP_SERVER }}
-        username: ${{ secrets.SFTP_USERNAME }}
-        password: ${{ secrets.SFTP_PASSWORD }}
+        server: ${{ secrets.SERVER }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
         local-dir: ./ # The local directory to upload
-        remote-dir: ${{ secrets.SFTP_SERVER_PATH }} # The server directory to upload to
+        server-dir: ${{ secrets.SERVER_PATH }} # The server directory to upload to
+
+    - name: Set correct permissions
+      run: |
+        ssh ${{ secrets.USERNAME }}@${{ secrets.SERVER }} 'chmod -R 755 ${{ secrets.SERVER_PATH }}/storage ${{ secrets.SERVER_PATH }}/bootstrap/cache'
