--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,37 +1,30 @@
-name: Publish Laravel Website to CPanel
-
+name: Deploy Laravel Project on push
 on:
   push:
     branches:
       - main
-
 jobs:
-  Deploy:
-    name: Deploy via SFTP
+  web-deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Install PHP and Composer
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.2'
-        tools: composer
-
-    - name: Install PHP dependencies
-      run: composer install --no-dev --optimize-autoloader
-
-    - name: Deploy to server via SFTP
-      uses: appleboy/sftp-action@v1.2.0
-      with:
-        host: ${{ secrets.SERVER }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        port: 22 # Default port for SFTP
-        local-dir: ./ # Local directory to upload
-        remote-dir: ${{ secrets.SERVER_PATH }} # Remote directory to upload to
-
-    - name: Set correct permissions
-      run: |
-        ssh ${{ secrets.USERNAME }}@${{ secrets.SERVER }} 'chmod -R 755 ${{ secrets.SERVER_PATH }}/storage ${{ secrets.SFTP_SERVER_PATH }}/bootstrap/cache'
+      - name: Get the latest code
+        uses: actions/checkout@v2.3.2
+      - uses: actions/setup-node@master
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      - name: Install Dependencies
+        run: composer update --ignore-platform-reqs
+      - name: Generate key
+        run: php artisan key:generate
+      - name: Generate storage link
+        run: php artisan storage:link
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir: /
