--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:eYTdaEmiTNjQXr9leb0L8EUVORBBgyJtI0AuZtnpXes=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=iix400.cloudhost.id
+DB_PORT=3306
+DB_DATABASE=fzcbbghb_db_bimbingan
+DB_USERNAME=fzcbbghb_bimbingan
+DB_PASSWORD=12bimbingan34
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
